Fixed image sizing and squashing on phones

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -32,10 +32,6 @@
     margin-left: auto;
 }
 
-#links img {
-    height: 30px;
-}
-
 #contact {
     display: flex;
     flex: 0 0 5%;
